<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundcolor"
    android:backgroundTint="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".food">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/darkpurplecircle"
        android:padding="10dp"
        android:src="@drawable/shopping" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">


        <EditText

            android:id="@+id/editShopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_str"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">


        <EditText

            android:id="@+id/editShopDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_str" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">


        <EditText

            android:id="@+id/editShopDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/date_str" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">


        <EditText

            android:id="@+id/editShopPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />


    </android.support.design.widget.TextInputLayout>


    <ImageView
        android:id="@+id/editShopButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/lightblucircle"
        android:padding="10dp"
        android:src="@drawable/check" />

    <ImageView
        android:id="@+id/ShopEditDelete"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/redcircle"
        android:padding="10dp"
        android:src="@drawable/deleteicon" />


</LinearLayout>