<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:gravity="center"
    tools:context=".dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:clipToPadding="false">




        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/food_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightgray"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/greencircle"
                    android:padding="10dp"
                    android:src="@drawable/food" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightgray"
                    android:text="@string/food_str"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:text="@string/food_str_sub"
                    android:textSize="13dp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/transport_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightgray"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/orangecircle"
                    android:padding="10dp"
                    android:src="@drawable/transport" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightgray"
                    android:text="@string/transport_str"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:text="@string/trans_str_sub"
                    android:textSize="13dp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:clipToPadding="false">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/shopping_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightgray"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/darkpurplecircle"
                    android:padding="10dp"
                    android:src="@drawable/shopping" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightgray"
                    android:text="@string/shopping_str"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:text="@string/shopping_str_sub"
                    android:textSize="13dp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/cc_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightgray"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/darkgraycircle"
                    android:padding="10dp"
                    android:src="@drawable/creditcard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightgray"
                    android:text="@string/cc_str"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:text="@string/cc_str_sub"
                    android:textSize="13dp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>





    </LinearLayout>


</LinearLayout>