<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:fillViewport="true"
android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:backgroundTint="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".food"
    tools:isScrollContainer="false">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/greencircle"
        android:padding="10dp"
        android:src="@drawable/summary" />

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="514dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="57dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/greencircle"
                android:padding="10dp"
                android:src="@drawable/food" />

            <TextView

                android:layout_width="51dp"
                android:layout_height="35dp"

                android:layout_gravity="left|center"
                android:layout_marginTop="5dp"
                android:layout_marginRight="-20dp"

                android:text="@string/food_str"
                android:textColor="@color/limegreen"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-condensed" />

            <TextView

                android:id="@+id/textViewFoodSum"
                android:layout_width="170dp"

                android:layout_height="wrap_content"



                android:layout_marginTop="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="1dp"
                android:gravity="end"
                android:textColor="@color/limegreen"
                android:textSize="26sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/orangecircle"
                android:padding="10dp"
                android:src="@drawable/transport" />

            <TextView

                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_marginTop="5dp"
                android:layout_marginRight="-20dp"

                android:text="@string/transport_str"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/textViewTransportSum"
                android:layout_width="147dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="1dp"
                android:gravity="end"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="26sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">


            <ImageView
                android:layout_width="58dp"
                android:layout_height="59dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/darkpurplecircle"
                android:padding="10dp"
                android:src="@drawable/shopping" />

            <TextView

                android:layout_width="82dp"
                android:layout_height="wrap_content"

                android:layout_gravity="left|center"
                android:layout_marginTop="5dp"
                android:layout_marginRight="-20dp"

                android:text="@string/shopping_str"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-condensed" />

            <TextView

                android:id="@+id/textViewShopSum"
                android:layout_width="117dp"

                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="1dp"
                android:gravity="end"
                android:textColor="@color/darkpurple"
                android:textSize="26sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="42dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginRight="-30dp"/>

            <TextView
                android:id="@+id/totSum"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="26sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>

</ScrollView>